# Junimo

./: README.md  bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: Release.yml
public/locales/de/: config.json  export.json  home.json  import.json  profiles.json  smapi.json  updater.json
public/locales/en/: config.json  export.json  home.json  import.json  profiles.json  smapi.json  updater.json
src/: global.css  i18n.ts  main.tsx  output.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app/: app_state.rs  config.rs  console.rs  export.rs  game.rs  import.rs  junimo_updater.rs  mod.rs  mod_installation.rs  mods.rs  profiles.rs  smapi.rs  user.rs  util.rs
src-tauri/src/app/api/: compatibility.rs  downloader.rs  github.rs  mod.rs  mods_api.rs  nexuswebsocket.rs
src-tauri/src/app/models/: mod_info.rs
src-tauri/src/app/utility/: browser.rs  mod.rs  paths.rs  version_extractor.rs  zips.rs
src-tauri/src/testing/: directory_selector.rs  mod.rs  register_manager.rs
src/components/: Console.tsx  Downloader.tsx  MiddleButtons.tsx  Mods.tsx  ModsInstalled.tsx  ModsProvider.tsx  Theme.tsx  UninstallAll.tsx  UninstallMod.tsx  UtilityBar.tsx
src/components/config/: CheckConfig.tsx  GeneralConfig.tsx  NexusConfig.tsx
src/components/menubar/: File.tsx  Help.tsx  Profiles.tsx  Theme.tsx  Tools.tsx  WindowActions.tsx
src/components/ui/: input.tsx  menubar.tsx  progress.tsx  save.tsx  select.tsx  tabs.tsx  wrapper.tsx
src/models/: config.ts  console.ts  download.ts  mods.ts  profile.ts  smapiProcess.ts  user.ts
src/pages/: config.tsx  exporter.tsx  home.tsx  importer.tsx  profiles.tsx  smapi.tsx  splashscreen.tsx  test.tsx  updater.tsx
