[package]
name = "jumino"
version = "0.0.0"
description = "Junimo"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "1.1.2"
rfd = "0.14.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tungstenite = "0.21.0"
url = "2.5.0"
bincode = "1.3.3"
futures-util = "0.3.30"
rand = "0.8"
reqwest = { version = "0.12.4", features = ["stream"] }
winreg = "0.52.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
regex = "1.10.4"
portable-pty = "0.8.1"
smol = "2.0.0"
async-std = "1.10.0"
ansi-to-html = "0.2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
