[package]
name = "junimo"
version = "0.8.4"
description = "Junimo"
authors = ["Tentastic"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["test", "tray-icon"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta.5"

mockall = "=0.9.1"
tempfile = "3.10.1"
cargo-tarpaulin = "0.29.2"
dirs = "5.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "1.1.2"
rfd = { version = "0.14.1", default-features = false, features = ["gtk3"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tungstenite = "0.21.0"
url = "2.5.0"
bincode = "1.3.3"
futures-util = "0.3.30"
rand = "0.8"
reqwest = { version = "0.12.4", features = ["stream"] }
semver = "1.0"
regex = "1.10.4"
portable-pty = "0.8.1"
smol = "2.0.0"
async-std = "1.10.0"
ansi-to-html = "0.2.1"
anyhow = "1.0.82"
sysinfo = "0.30.11"
walkdir = "2.3"
json-strip-comments = "1.0.2"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.7"
widestring = "1.1.0"
tauri-plugin-process = "2.0.0-beta.4"

[target.'cfg(unix)'.dependencies]
pelite = "0.10.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
winapi = { version = "0.3", features = ["winnt", "fileapi", "winver"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
